# MQDB

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLA.md  CLI_TESTING_GUIDE.md  COMPLETE_MATRIX_DOC.md  COMPLETE_MATRIX_RESULTS.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTED_DESIGN.md  Dockerfile  IDEATION.md  IMPLEMENTATION_PLAN.md  Makefile.toml  NOTICE  README.md  SECURITY.md  deny.toml
crates/mqdb-agent/: Cargo.toml
crates/mqdb-agent/src/: auth_config.rs  broker_defaults.rs  consumer_group.rs  cursor.rs  db_helpers.rs  dedup.rs  dispatcher.rs  lib.rs  outbox_processor.rs  runtime.rs  session.rs  subscription_registry.rs  topic_protection.rs  topic_rules.rs  transport_execute.rs  vault_backend.rs  vault_ops.rs  vault_transform.rs
crates/mqdb-agent/src/agent/: broker.rs  handlers.rs  mod.rs  tasks.rs
crates/mqdb-agent/src/database/: background.rs  backup.rs  crud.rs  mod.rs  query.rs  schema_ops.rs  sharing.rs  subscriptions.rs
crates/mqdb-agent/src/http/: challenge_utils.rs  cookies.rs  credentials.rs  handlers.rs  identity_crypto.rs  jwt_signer.rs  mod.rs  pkce.rs  rate_limiter.rs  server.rs  session_store.rs
crates/mqdb-agent/src/http/providers/: google.rs  mod.rs
crates/mqdb-agent/tests/: admin_test.rs  atomicity_test.rs  concurrency_test.rs  constraint_test.rs  crash_recovery_test.rs  durability_test.rs  integration_test.rs  mqtt_protocol_test.rs  point_to_point_test.rs
crates/mqdb-agent/tests/common/: mod.rs
crates/mqdb-cli/: Cargo.toml
crates/mqdb-cli/src/: common.rs  license.rs  main.rs
crates/mqdb-cli/src/cli_types/: agent.rs  auth.rs  base.rs  bench.rs  dev.rs  license.rs  mod.rs
crates/mqdb-cli/src/commands/: agent.rs  cluster.rs  consumer.rs  env_secret.rs  mod.rs
crates/mqdb-cli/src/commands/bench/: common.rs  db_async.rs  db_cascade.rs  db_changefeed.rs  db_sync.rs  db_unique.rs  mod.rs  pubsub.rs
crates/mqdb-cli/src/commands/dev/: cluster.rs  tests.rs
crates/mqdb-cli/src/commands/dev_bench/: helpers.rs  runners.rs
crates/mqdb-cli/tests/: cli_test.rs
crates/mqdb-cli/tests/common/: mod.rs
crates/mqdb-cluster/: Cargo.toml
crates/mqdb-cluster/src/: lib.rs
crates/mqdb-cluster/src/cluster/: client_location.rs  cursor.rs  dedicated_executor.rs  heartbeat.rs  idempotency_store.rs  inflight_store.rs  message_processor.rs  mod.rs  mqtt_transport.rs  offset_store.rs  partition_storage.rs  publish_router.rs  qos2_store.rs  query_coordinator.rs  quorum.rs  raft_task.rs  rebalance_coordinator.rs  rebalancer.rs  replication.rs  session.rs  subscription_cache.rs  topic_index.rs  topic_trie.rs  transport.rs  wildcard_store.rs  write_log.rs
crates/mqdb-cluster/src/cluster/db/: constraint_store.rs  data_store.rs  fk_store.rs  index_store.rs  mod.rs  partition.rs  schema_store.rs  unique_store.rs
crates/mqdb-cluster/src/cluster/db_handler/: binary_ops.rs  helpers.rs  json_ops.rs  mod.rs  tests.rs
crates/mqdb-cluster/src/cluster/event_handler/: broker_events.rs  mod.rs  routing.rs
crates/mqdb-cluster/src/cluster/node_controller/: db_ops.rs  fk.rs  mod.rs  pending.rs  query.rs  replication_ops.rs  retained.rs  session_ops.rs  tests.rs  unique.rs
crates/mqdb-cluster/src/cluster/protocol/: broadcast.rs  fk.rs  heartbeat.rs  mod.rs  publish.rs  query.rs  tests.rs  types.rs  unique.rs
crates/mqdb-cluster/src/cluster/raft/: mod.rs  node.rs  storage.rs
crates/mqdb-cluster/src/cluster/store_manager/: apply.rs  constraint_ops.rs  db_ops.rs  mod.rs  outbox.rs  partition_io.rs  schema_ops.rs  unique_ops.rs
crates/mqdb-cluster/src/cluster_agent/: admin.rs  broker.rs  config.rs  event_loop.rs  init.rs  mod.rs  transport.rs
crates/mqdb-cluster/tests/: cluster_integration_test.rs  cluster_test.rs  mqtt_cluster_test.rs
crates/mqdb-cluster/tests/common/: mod.rs
crates/mqdb-cluster/tests/simulation/: transport.rs
crates/mqdb-cluster/tests/simulation/framework/: mod.rs  network.rs  runtime.rs
crates/mqdb-core/: Cargo.toml
crates/mqdb-core/src/: checksum.rs  config.rs  constraint.rs  entity.rs  error.rs  events.rs  index.rs  keys.rs  lib.rs  license.rs  outbox.rs  query.rs  relationship.rs  schema.rs  subscription.rs  transport.rs  types.rs  vault_keys.rs
crates/mqdb-core/src/partition/: functions.rs  map.rs  mod.rs  types.rs
crates/mqdb-core/src/protocol/: mod.rs
crates/mqdb-core/src/storage/: backend.rs  encrypted_backend.rs  fjall_backend.rs  memory_backend.rs  mod.rs
crates/mqdb-gui/: Cargo.toml
crates/mqdb-gui/src/: app.rs  client.rs  main.rs  state.rs  theme.rs
crates/mqdb-gui/src/panels/: connection.rs  constraints.rs  entities.rs  events.rs  mod.rs  record_edit.rs  records.rs  schema.rs
crates/mqdb-vault/: Cargo.toml
crates/mqdb-vault/src/: backend.rs  crypto.rs  key_store.rs  lib.rs  ops.rs  transform.rs
crates/mqdb-vault/tests/: backend_integration.rs
crates/mqdb-wasm/: Cargo.toml  README.md
crates/mqdb-wasm/.cargo/: config.toml
crates/mqdb-wasm/examples/: README.md  basic-crud.html  constraints.html  count.html  cursor.html  encrypted.html  execute.html  filtering.html  index.html  persistent.html  relationships.html  schema.html  subscriptions.html  sync-api.html
crates/mqdb-wasm/examples/shared/: common.css
crates/mqdb-wasm/src/: constraints.rs  crud.rs  crypto.rs  cursor.rs  encoding.rs  execute.rs  indexeddb.rs  lib.rs  query.rs  schema.rs  subscriptions.rs  tests.rs  types.rs
publications/vldb-mqtt-as-database/bench/: AWS-PROCEDURE.md  Cargo.toml  Dockerfile.mosquitto-redis  docker-compose.yml  mosquitto-redis.conf  mosquitto.conf  run_phase1_agent.sh  run_phase1_crud_rerun.sh  run_phase1_list_rerun.sh  run_phase2_cluster.sh  schema.sql
publications/vldb-mqtt-as-database/bench/rest-pg/: Cargo.toml
publications/vldb-mqtt-as-database/bench/rest-pg/src/: bench.rs  bench_cascade.rs  bench_changefeed.rs  (+3 more)
publications/vldb-mqtt-as-database/bench/scripts/: aws_run.sh  extract_tables.py  guard_aws_dir.sh  provenance.sh
publications/vldb-mqtt-as-database/bench/src/: config.rs  main.rs
scripts/public-templates/: Cargo.toml  Makefile.toml  README.md
scripts/public-templates/src/: lib.rs
(+377 files in other folders)
