[package]
name = "mqdb"
version = "0.1.0"
edition = "2024"

[dependencies]
crc32fast = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.19", features = ["v4", "v7"] }
bebytes = { version = "3.0", features = ["bytes"] }

clap = { version = "4.5", features = ["derive", "env"], optional = true }
comfy-table = { version = "7.2", optional = true }
fjall = { version = "3.0", optional = true }
mqtt5 = { version = "0.18", optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
glob = "0.3"

[features]
default = ["native"]
native = [
    "dep:clap",
    "dep:comfy-table",
    "dep:fjall",
    "dep:mqtt5",
    "dep:tokio",
    "dep:tracing-subscriber",
]
opentelemetry = [
    "mqtt5/opentelemetry",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies.opentelemetry]
version = "0.31"
optional = true
features = ["trace"]

[dependencies.tracing-opentelemetry]
version = "0.32"
optional = true

[[bin]]
name = "mqdb"
path = "src/bin/mqdb.rs"
required-features = ["native"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18.1", features = ["v4", "js"] }

[dev-dependencies]
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
