[workspace]
members = [
    "crates/mqdb-core",
    "crates/mqdb-agent",
    "crates/mqdb-cluster",
    "crates/mqdb-cli",
    "crates/mqdb-vault",
]
exclude = [
    "crates/mqdb-wasm",
]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["LabOverWire"]
repository = "https://github.com/LabOverWire/MQDB"

[workspace.dependencies]
crc32fast = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.19", features = ["v4", "v7"] }
bebytes = { version = "3.0.2", features = ["bytes"] }
glob = "0.3"
regex = "1.12"
flume = { version = "0.12.0", features = ["async"] }
arc-swap = "1.8"
zeroize = "1.8.2"

clap = { version = "4.5", features = ["derive", "env"] }
comfy-table = "7.2"
fjall = "3.0"
mqtt5 = "0.31"
tokio = { version = "1.49", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16"
ring = "0.17"

quinn = { version = "0.11", default-features = false, features = ["rustls-ring", "runtime-tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pki-types = { version = "1.14.0", features = ["std"] }
rustls-native-certs = "0.8.3"

hyper = { version = "1.8.1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"] }
http-body-util = "0.1.3"
http = "1.4"
reqwest = { version = "0.13", features = ["form", "json"] }
base64 = "0.22"
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }

opentelemetry = { version = "0.31", features = ["trace"] }
tracing-opentelemetry = "0.32"

tempfile = "3.23.0"

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = 2
lto = false
codegen-units = 1
split-debuginfo = "packed"

[profile.dist]
inherits = "release"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[patch.crates-io]
mqtt5 = { git = "https://github.com/LabOverWire/mqtt-lib.git" }
mqtt5-protocol = { git = "https://github.com/LabOverWire/mqtt-lib.git" }
