[package]
name = "mqdb-agent"
version = "0.3.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Standalone MQTT broker agent with embedded database for MQDB"

[dependencies]
mqdb-core = { path = "../mqdb-core", version = "0.2.0", features = ["fjall-backend"] }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
glob.workspace = true
regex.workspace = true
flume.workspace = true
arc-swap.workspace = true
zeroize.workspace = true

fjall.workspace = true
mqtt5.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
lru.workspace = true
ring.workspace = true
comfy-table.workspace = true

hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
argon2 = { version = "0.5.3", optional = true }

[features]
default = ["http-api"]
http-api = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:http",
    "dep:reqwest",
    "dep:base64",
    "dep:jsonwebtoken",
    "dep:argon2",
]
dev-insecure = []
opentelemetry = [
    "mqtt5/opentelemetry",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
]

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
