[package]
name = "mqdb-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types, storage, schema, and protocol for MQDB"

[dependencies]
crc32fast.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
bebytes.workspace = true
glob.workspace = true
regex.workspace = true
flume.workspace = true
arc-swap.workspace = true
zeroize.workspace = true

fjall = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18.1", features = ["v4", "js"] }

[features]
default = ["fjall-backend", "native"]
fjall-backend = ["dep:fjall", "dep:ring"]
native = ["dep:tokio"]

[dev-dependencies]
tempfile.workspace = true
tokio.workspace = true
