[package]
name = "mqdb-wasm"
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["LabOverWire"]
description = "WASM client library for MQDB reactive database"
repository = "https://github.com/LabOverWire/MQDB"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mqdb-core = { path = "../mqdb-core", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "console",
    "Event",
    "EventTarget",
    "DomStringList",
    "IdbFactory",
    "IdbDatabase",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbRequest",
    "IdbOpenDbRequest",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbCursor",
    "IdbCursorDirection",
    "IdbCursorWithValue",
    "IdbKeyRange",
    "IdbVersionChangeEvent",
    "DomException",
    "Crypto",
    "SubtleCrypto",
    "CryptoKey",
    "AesGcmParams",
    "AesKeyGenParams",
    "Pbkdf2Params",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
uuid = { version = "1.18", features = ["v4", "js"] }
web-time = "1.1"
futures-channel = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = true
