[package]
name = "mqdb"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["LabOverWire"]
description = "An embedded reactive database with native MQTT integration"
repository = "https://github.com/LabOverWire/mqdb-agent-private"

[dependencies]
crc32fast = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.19", features = ["v4", "v7"] }
bebytes = { version = "3.0.2", features = ["bytes"] }

clap = { version = "4.5", features = ["derive", "env"], optional = true }
comfy-table = { version = "7.2", optional = true }
fjall = { version = "3.0", optional = true }
mqtt5 = { version = "0.22", optional = true }
tokio = { version = "1.49", features = ["full"], optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }
glob = "0.3"
regex = "1.12"
flume = { version = "0.12.0", features = ["async"] }
arc-swap = "1.8"
hyper = { version = "1.8.1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["server", "tokio", "http1"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
http = { version = "1.4", optional = true }
reqwest = { version = "0.13", features = ["form", "json"], optional = true }
ring = { version = "0.17", optional = true }
base64 = { version = "0.22", optional = true }
lru = { version = "0.16", optional = true }
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"], optional = true }
zeroize = "1.8.2"

[features]
default = ["agent", "http-api"]

agent = [
    "dep:clap",
    "dep:comfy-table",
    "dep:fjall",
    "dep:mqtt5",
    "dep:tokio",
    "dep:tracing-subscriber",
    "dep:lru",
    "dep:ring",
]

http-api = [
    "agent",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:http",
    "dep:reqwest",
    "dep:ring",
    "dep:base64",
    "dep:jsonwebtoken",
]

dev-insecure = []
wasm = [
    "dep:web-time",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
]
opentelemetry = [
    "mqtt5/opentelemetry",
    "dep:opentelemetry",
    "dep:tracing-opentelemetry",
]
tracing-subscriber = ["dep:tracing-subscriber"]

[dependencies.opentelemetry]
version = "0.31"
optional = true
features = ["trace"]

[dependencies.tracing-opentelemetry]
version = "0.32"
optional = true

[[bin]]
name = "mqdb"
path = "src/bin/mqdb/main.rs"
required-features = ["agent"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.18.1", features = ["v4", "js"] }
web-time = { version = "1.1", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["Window"], optional = true }

[dev-dependencies]
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
debug = true

[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = 2
lto = false
codegen-units = 1
split-debuginfo = "packed"

[profile.dist]
inherits = "release"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"

[patch.crates-io]
mqtt5 = { git = "https://github.com/LabOverWire/mqtt-lib.git" }
mqtt5-protocol = { git = "https://github.com/LabOverWire/mqtt-lib.git" }
